# freesurgery

./: CMakeLists.txt  MANIFEST.in  README.md  setup.py
freesurgery/: __init__.py  command_line.py  main.py  mesh_viewer.py  utils.py
freesurgery/static/css/: app.css
freesurgery/static/js/: hmm.js  index.js
freesurgery/templates/: index.html
freesurgery/web/: index.html
src/freesurgery/: bindings.cpp  command_line.py  gui.py  nii2mesh.py
src/freesurgery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/freesurgery/geometry_core/: bindings.cpp  cgal_mesh_image.cpp  cgal_mesh_image.hpp  mesh_utils.cpp  mesh_utils.hpp
src/freesurgery/geometry_core/mesh_utils/: cgal_mesh_image.cpp  cgal_mesh_image.hpp
